Remove usage of Collectors.toList to Stream.toList